# shrine

./: .gitignore  arch.md  comain.swift  main.odin  main.swift
Builder/: meson.build  shrine.c
Core/: Comain.swift  Main.swift  MainGooEngine.swift
Core/CoreTemple/: Package.swift
DragonSeven/: D7  D7.swift  sb.odin
GooStack/: GooBase.swift  GooCore.swift  GooDB  GooDB.swift  GooFu.swift  GooGate.swift  GooGlue.swift  GooLib.swift  GooMagi.swift  GooPlug.swift  GooRay.swift  GooRun.swift  Package.swift
GooStack/Tests/GooStackTests/: GooStackTests.swift
Modules/Eco/src/: eco.odin  ecodb.odin
Modules/Kami/Box/: arch.swift
Modules/Magi/src/: main.swift
Modules/Torii/: sh.odin
Torii/: sh.odin  term.odin
